--- a/error.html
+++ b/error.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=cuOHB0RAM_gAX9IzHYc&oh=6e3a5767ea5db508c3c06ad639576890&oe=5EACEEB2" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=5KPzc639RWYAX8fMzQy&oh=79c75d5e5b799b159c2bc2ac08d4b82c&oe=5EB0E332" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -111,77 +111,23 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./my-vmeste-s-xvxkonovalov-kak-vsegda.html" class="article-more__item">
+							<a href="./posts/./dorogiex-druz-ya.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>86</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>49</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wdIbQYJNaaQAX81XN4T&oh=9fff5f7367a20c865fd700f94670fdd3&oe=5EAEC570" alt="Мы вместе с @v_konovalov как всегда,">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=yrTSfTItRH8AX-aF2oE&oh=469089df274efd129684aafd5adc3128&oe=5EB101E5" alt="Дорогие, друзья!">
 							</div>
-							<div class="article-more__item-name">Мы вместе с @v_konovalov как всегда,</div>
+							<div class="article-more__item-name">Дорогие, друзья!</div>
 						</a>
-							<a href="./posts/./xx-kazhdyy-den--chto-to-novoe.html" class="article-more__item">
+							<a href="./posts/./xxskol-ko-nalivat--vody.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>82</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89599097_489819171923795_956639264642153939_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SQpC30v4JAwAX86sCoR&oh=9b777f78521e4cb28209247f6082017c&oe=5EAF6B89" alt="🌱 Каждый день что-то новое">
+								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=1MvFvjnz_YwAX-R_Gfv&oh=ca91008a62c1be2f47b50f486f422401&oe=5EB0C2E0" alt="🐌Сколько наливать воды?">
 							</div>
-							<div class="article-more__item-name">🌱 Каждый день что-то новое</div>
-						</a>
-							<a href="./posts/./ne-perestayom-uchit-sya-i-trudit-sya.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>78</span>
-								</div>
-								<img src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91024023_816058575573395_3244880168226135931_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=WWtm4tHoBGgAX_arAxi&oh=564f71e155353d5d8c2ac2c4ce686193&oe=5EAFF294" alt="Не перестаём учиться и трудиться">
-							</div>
-							<div class="article-more__item-name">Не перестаём учиться и трудиться</div>
-						</a>
-							<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>77</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=KtePJx7u3LwAX_HaHAD&oh=2ac8754686b2a466fc41c1935bbdfe88&oe=5EAD8E94" alt="💧Для улитки её муцин">
-							</div>
-							<div class="article-more__item-name">💧Для улитки её муцин</div>
-						</a>
-							<a href="./posts/./fevral--my-provedyom-v-puteshestvii.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>73</span>
-								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=zQf1Z2RalYMAX_K2reV&oh=3c7bc5378ca4fa74769b51cf51b2a856&oe=5EB0B267" alt="Февраль мы проведём в путешествии.">
-							</div>
-							<div class="article-more__item-name">Февраль мы проведём в путешествии.</div>
-						</a>
-							<a href="./posts/./ideal-nyy-podarok-na-8-marta.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>66</span>
-								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87721245_2764877730297330_2852415827593620104_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=Zfktocicuo8AX-E7bjm&oh=410ee056e6c139bd6af221e97e56ad92&oe=5EB0126A" alt="Идеальный подарок на 8 Марта!">
-							</div>
-							<div class="article-more__item-name">Идеальный подарок на 8 Марта!</div>
-						</a>
-							<a href="./posts/./vsem-privet.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
-								</div>
-								<img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/90180717_128182535425545_2201137280186616857_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=Fvff2H-sGhUAX_IjLlp&oh=c36d3842160777af530c674e746ff416&oe=5E87318E" alt="Всем привет!">
-							</div>
-							<div class="article-more__item-name">Всем привет!</div>
-						</a>
-							<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
-								</div>
-								<img src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=9j0j1MEMISIAX_Q1kwP&oh=90be11393dd4b7325b80856b1620d54c&oe=5EAEF4B4" alt="Сегодня пост без информации и полезностей.">
-							</div>
-							<div class="article-more__item-name">Сегодня пост без информации и полезностей.</div>
+							<div class="article-more__item-name">🐌Сколько наливать воды?</div>
 						</a>
 						</div>
 				</div>
