--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="муцин экоферма улиточка улитки жизньулиток сад огород история snailfarm snailmucin события">
-    <meta name="keywords" content="муцин экоферма улиточка улитки жизньулиток сад огород история snailfarm snailmucin события" />
+    <meta name="description" content="муцинулитки здоровьекожи натуральныйуход длякрасоты омоложениекожи ежедневныйуход оставайтесьдома уходзалицомителом натуральнаякрасота муцин экофермаулиточка">
+    <meta name="keywords" content="муцинулитки здоровьекожи натуральныйуход длякрасоты омоложениекожи ежедневныйуход оставайтесьдома уходзалицомителом натуральнаякрасота муцин экофермаулиточка" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Муцин Улитки." />
-    <meta property="og:description" content="муцин экоферма улиточка улитки жизньулиток сад огород история snailfarm snailmucin события" />
+    <meta property="og:description" content="муцинулитки здоровьекожи натуральныйуход длякрасоты омоложениекожи ежедневныйуход оставайтесьдома уходзалицомителом натуральнаякрасота муцин экофермаулиточка" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="ulitochka_eco_farm" />
 
@@ -79,7 +79,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=cuOHB0RAM_gAX9IzHYc&oh=6e3a5767ea5db508c3c06ad639576890&oe=5EACEEB2" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=5KPzc639RWYAX8fMzQy&oh=79c75d5e5b799b159c2bc2ac08d4b82c&oe=5EB0E332" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -102,128 +102,92 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="муцин экоферма улиточка">
-									<a href="./tags/./mutsin-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ekoferma-ulitochka.png);"></div>
+								<div class="stories__slide" title="муцинулитки">
+									<a href="./tags/./mutsinulitki.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsinulitki.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">муцин экоферма улиточка</div>
+">муцинулитки</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="муцин улитки">
-									<a href="./tags/./mutsin-ulitki.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ulitki.png);"></div>
+								<div class="stories__slide" title="здоровьекожи">
+									<a href="./tags/./zdorov-ekozhi.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/zdorov-ekozhi.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">муцин улитки</div>
+">здоровьекожи</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма улиточка">
-									<a href="./tags/./ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma-ulitochka.png);"></div>
+								<div class="stories__slide" title="натуральныйуход">
+									<a href="./tags/./natural-nyyukhod.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/natural-nyyukhod.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма улиточка</div>
+">натуральныйуход</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="жизньулиток экоферма улиточка">
-									<a href="./tags/./zhizn-ulitok-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/zhizn-ulitok-ekoferma-ulitochka.png);"></div>
+								<div class="stories__slide" title="оставайтесьдома">
+									<a href="./tags/./ostavaytes-doma.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ostavaytes-doma.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">жизньулиток экоферма улиточка</div>
+">оставайтесьдома</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="сад огород экоферма улиточка">
-									<a href="./tags/./sad-ogorod-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sad-ogorod-ekoferma-ulitochka.png);"></div>
+								<div class="stories__slide" title="длякрасоты">
+									<a href="./tags/./dlyakrasoty.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/dlyakrasoty.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">сад огород экоферма улиточка</div>
+">длякрасоты</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="улиточка муцин">
-									<a href="./tags/./ulitochka-mutsin.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ulitochka-mutsin.png);"></div>
+								<div class="stories__slide" title="омоложениекожи">
+									<a href="./tags/./omolozheniekozhi.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/omolozheniekozhi.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">улиточка муцин</div>
+">омоложениекожи</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="история экоферма улиточка">
-									<a href="./tags/./istoriya-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/istoriya-ekoferma-ulitochka.png);"></div>
+								<div class="stories__slide" title="ежедневныйуход">
+									<a href="./tags/./ezhednevnyyukhod.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ezhednevnyyukhod.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">история экоферма улиточка</div>
+">ежедневныйуход</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="события экоферма улиточка">
-									<a href="./tags/./sobytiya-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/sobytiya-ekoferma-ulitochka.png);"></div>
+								<div class="stories__slide" title="уходзалицомителом">
+									<a href="./tags/./ukhodzalitsomitelom.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ukhodzalitsomitelom.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">события экоферма улиточка</div>
+">уходзалицомителом</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="snailfarm">
-									<a href="./tags/./snailfarm.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/snailfarm.png);"></div>
+								<div class="stories__slide" title="натуральнаякрасота">
+									<a href="./tags/./natural-nayakrasota.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/natural-nayakrasota.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">snailfarm</div>
+">натуральнаякрасота</div>
 									</a>
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="snailmucin">
-									<a href="./tags/./snailmucin.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/snailmucin.png);"></div>
+								<div class="stories__slide" title="муцин экофермаулиточка">
+									<a href="./tags/./mutsin-ekofermaulitochka.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/mutsin-ekofermaulitochka.png);"></div>
 										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">snailmucin</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="допосле экоферма улиточка">
-									<a href="./tags/./doposle-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/doposle-ekoferma-ulitochka.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">допосле экоферма улиточка</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="еда экоферма улиточка">
-									<a href="./tags/./eda-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/eda-ekoferma-ulitochka.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">еда экоферма улиточка</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="экс курсии экоферма улиточка">
-									<a href="./tags/./eks-kursii-ekoferma-ulitochka.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/eks-kursii-ekoferma-ulitochka.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экс курсии экоферма улиточка</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="экоферма">
-									<a href="./tags/./ekoferma.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ekoferma.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
-">экоферма</div>
+">муцин экофермаулиточка</div>
 									</a>
 								</div>
 							</div>
@@ -327,93 +291,27 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./posts/./my-vmeste-s-xvxkonovalov-kak-vsegda.html" class="article-more__item">
+								<a href="./posts/./dorogiex-druz-ya.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>86</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>49</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wdIbQYJNaaQAX81XN4T&oh=9fff5f7367a20c865fd700f94670fdd3&oe=5EAEC570" alt="Мы вместе с @v_konovalov как всегда,">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91324457_527907044581269_8511334676281573971_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=yrTSfTItRH8AX-aF2oE&oh=469089df274efd129684aafd5adc3128&oe=5EB101E5" alt="Дорогие, друзья!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">Мы вместе с @v_konovalov как всегда,</div>
+">Дорогие, друзья!</div>
 								</a>
-								<a href="./posts/./xx-kazhdyy-den--chto-to-novoe.html" class="article-more__item">
+								<a href="./posts/./xxskol-ko-nalivat--vody.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>82</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89599097_489819171923795_956639264642153939_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=SQpC30v4JAwAX86sCoR&oh=9b777f78521e4cb28209247f6082017c&oe=5EAF6B89" alt="🌱 Каждый день что-то новое">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/91570969_222465489025459_1619672187752612178_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=1MvFvjnz_YwAX-R_Gfv&oh=ca91008a62c1be2f47b50f486f422401&oe=5EB0C2E0" alt="🐌Сколько наливать воды?">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
-">🌱 Каждый день что-то новое</div>
-								</a>
-								<a href="./posts/./ne-perestayom-uchit-sya-i-trudit-sya.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>78</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/91024023_816058575573395_3244880168226135931_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=WWtm4tHoBGgAX_arAxi&oh=564f71e155353d5d8c2ac2c4ce686193&oe=5EAFF294" alt="Не перестаём учиться и трудиться">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Не перестаём учиться и трудиться</div>
-								</a>
-								<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>77</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=KtePJx7u3LwAX_HaHAD&oh=2ac8754686b2a466fc41c1935bbdfe88&oe=5EAD8E94" alt="💧Для улитки её муцин">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">💧Для улитки её муцин</div>
-								</a>
-								<a href="./posts/./fevral--my-provedyom-v-puteshestvii.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>73</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=zQf1Z2RalYMAX_K2reV&oh=3c7bc5378ca4fa74769b51cf51b2a856&oe=5EB0B267" alt="Февраль мы проведём в путешествии.">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Февраль мы проведём в путешествии.</div>
-								</a>
-								<a href="./posts/./ideal-nyy-podarok-na-8-marta.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>66</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87721245_2764877730297330_2852415827593620104_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=106&_nc_ohc=Zfktocicuo8AX-E7bjm&oh=410ee056e6c139bd6af221e97e56ad92&oe=5EB0126A" alt="Идеальный подарок на 8 Марта!">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Идеальный подарок на 8 Марта!</div>
-								</a>
-								<a href="./posts/./vsem-privet.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/90180717_128182535425545_2201137280186616857_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=Fvff2H-sGhUAX_IjLlp&oh=c36d3842160777af530c674e746ff416&oe=5E87318E" alt="Всем привет!">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Всем привет!</div>
-								</a>
-								<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=9j0j1MEMISIAX_Q1kwP&oh=90be11393dd4b7325b80856b1620d54c&oe=5EAEF4B4" alt="Сегодня пост без информации и полезностей.">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #FFFFFF;
-">Сегодня пост без информации и полезностей.</div>
+">🐌Сколько наливать воды?</div>
 								</a>
 							</div>
 						</div>
